# cider-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  rustfmt.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
Formula/: cider.rb
apps/: Cargo.toml
apps/src/: main.rs  ui.rs
apps/src/commands/: account.rs  device.rs  macho.rs  mod.rs  session.rs
apps/src/commands/refresh/: mod.rs  run.rs
apps/src/commands/sign/: install.rs  mod.rs  signer.rs
crates/decompress/: Cargo.toml
crates/decompress/examples/: unzip.rs
crates/decompress/src/: lib.rs
crates/decompress/src/decompressors/: ar.rs  bz2.rs  gz.rs  lzma.rs  mod.rs  tarball.rs  tarbz.rs  targz.rs  tarlzma.rs  tarxz.rs  tarzst.rs  utils.rs  xz.rs  zip.rs  zstd.rs
crates/decompress/tests/: archives_test.rs
crates/plume_core/: Cargo.toml
crates/plume_core/src/auth/: anisette_data.rs
crates/plume_core/src/auth/account/: login.rs
crates/plume_core/src/developer/: session.rs
crates/plume_core/src/developer/qh/: devices.rs
crates/plume_core/src/utils/: certificate.rs  macho.rs  mod.rs
crates/plume_store/: Cargo.toml
crates/plume_utils/: Cargo.toml
crates/plume_utils/src/: cgbi.rs  device.rs  options.rs  package.rs  signer.rs
docs/: README.md  architecture.md  configuration.md  getting-started.md  platform-notes.md  signing.md
docs/commands/: README.md  account.md  device.md  inspect.md  refresh.md  sign.md
