[workspace]
resolver = "3"
members = [
    "apps",
    "crates/plume_core",
    "crates/plume_gestalt",
    "crates/plume_store",
    "crates/plume_utils",
]

[workspace.package]
edition = "2024"
version = "0.1.5"
authors = ["Muonagi"]
license = "MIT"
repository = "https://github.com/Muonagi/cider-cli"

[profile.release]
codegen-units = 1           # maximizes optimization opportunities across the entire crate
debug = "full"              # No one needs an undebuggable release binary
lto = "fat"                 # full cross-crate LTO for maximum inlining and optimization
opt-level = 3               # maximum runtime performance
panic = "abort"             # smaller code, no unwind overhead
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo
incremental = true          # Improves re-compile times

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
# Application
idevice = { git = "https://github.com/PlumeImpactor/plume-idevice", rev = "5e350a", default-features = false, features = [
    "full",
    "ring",
] }
plist = "1.8.0"
# Errors
log = "0.4.28"
thiserror = "2.0.16"
# Utils
uuid = "1.18.1"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rustls = { version = "0.23.32", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
